# mirage

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  mirage  mise.toml  pyproject.toml  pyrightconfig.json
.claude/: CONVENTIONS.md
.claude/skills/structured-project-workflow/: SKILL.md
docs/: design.md  llamaindex-comparison.md  raw-api.md  supported_models.md
docs/designs/00-alembic-migrations/: design.md  plan.md  (+1 more)
docs/plans/: 2026-01-28-mirage-full-implementation.md  2026-01-29-chunk-status-design.md  2026-01-29-chunk-status-plan.md  2026-01-29-parent-child-chunking-design.md  2026-01-29-parent-child-chunking-plan.md  2026-02-12-embedding-model-selection-design.md  2026-02-15-multi-model-embeddings-design.md  2026-02-15-multi-model-embeddings-plan.md  README.md  phase-1-foundation.md  phase-2-api.md  phase-3-indexer.md  phase-3.5.1-chunk-status-foundation.md  phase-3.5.2-chunk-status-workers.md  phase-3.5.3-chunk-status-visibility.md  phase-4-cli-integration.md  phase-5-infrastructure.md  progress.md
samples/: the-art-of-war.epub
scripts/: first-test.sh
skill/: mirage.md
src/mirage/: __init__.py
tests/api/: test_documents.py  test_main.py  test_projects.py  test_search.py
tests/cli/: test_cli.py  test_documents_cmd.py  test_search_cmd.py
tests/indexer/: test_chunking.py  test_embedding_worker.py  test_status_worker.py  test_worker.py
tests/integration/: test_multi_model.py
tests/shared/: test_config.py  test_db.py  test_embedding.py  test_models.py  test_models_registry.py
(+40 files in other folders)
